ベースOSをUbuntu-16.04に変更。サーバープロセス実行ユーザーの変更。